[package]
name = "rping"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.45", features = ["derive"] }
ctrlc = "3.4.7"
duration-str = "0.17.0"
env_logger = "0.11.8"
fancy-duration = "0.9.2"
internet-checksum = "0.2.1"
ipnet = "2.11.0"
log = "0.4.27"
pnet = "0.35.0"
pnet_packet = "0.35.0"
rand = "0.9.2"
