[package]
name = "rping"
version = "0.2.0"
edition = "2024"

[dependencies]
bytesize = "2.3.1"
clap = { version = "4.5.45", features = ["derive"] }
crossterm = { version = "0.29.0", default-features = false }
ctrlc = { version = "3.4.7", features = ["termination"] }
duration-str = "0.17.0"
env_logger = "0.11.8"
fancy-duration = "0.9.2"
internet-checksum = "0.2.1"
ipnet = "2.11.0"
log = "0.4.27"
num-format = "0.4.4"
pnet = "0.35.0"
pnet_packet = "0.35.0"
rand = "0.9.2"
